--- a/index.html
+++ b/index.html
@@ -391,12 +391,12 @@
                 </a>
                 <nav>
                     <ul class="nav">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#internships">Internships</a></li>
-                        <li><a href="#faqs">FAQs</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a href="#verify">Verify</a></li>
+                          <li><a href="https://prodigyinfotech.dev/#home" target="_blank">Home</a></li>
+                          <li><a href="#about">About</a></li>
+                          <li><a href="#internships">Internships</a></li>
+                          <li><a href="#faqs">FAQs</a></li>
+                          <li><a href="#contact">Contact</a></li>
+                          <li><a href="#verify">Verify</a></li>
                     </ul>
                 </nav>
             </div>
